# xray

./: .gitignore  .tool-versions  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  readme.md  vite.config.js
docs/: codebase-health-practices.md
mockup/: build.sh  index.html
mockup/src/: app.js  top.html
scripts/: generate-icon.mjs
src/: App.svelte  app.css  main.js  oswald.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: churn.rs  coupling.rs  hotspots.rs  loc.rs  mod.rs  ownership.rs  util.rs
src/lib/tabs/: ChurnTab.svelte  CouplingTab.svelte  HotspotsTab.svelte  LocTab.svelte  OwnersTab.svelte
src/lib/visualizations/: CirclePacking.svelte  ForceGraph.svelte  Heatmap.svelte  TeamTreemap.svelte  Treemap.svelte
src/lib/viz/: TopList.svelte  util.js
