[package]
name = "xray"
version = "0.1.0"
description = "Analyze code projects with Tornhill-style metrics and D3 visualizations"
authors = ["Xray"]
edition = "2021"

[lib]
name = "xray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
